kupac - osnovna strana

--- a/ProjaraWeb/WebContent/views/kupac_navBar.html
+++ b/ProjaraWeb/WebContent/views/kupac_navBar.html
@@ -6,11 +6,11 @@
         </div>
 
         <div id="navbar">
-            <ul class="nav navbar-nav">
-                <li><a href ng-click="primer1()">Primer1</a></li>
-                <li><a href ng-click="primer2()" >Primer2</a></li>
+            <p class="navbar-text navbar-right"><a href ng-click="odjava()">Odjavi se</a></p>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href ng-click="podaciOKorisniku()">korisnicko ime</a></li>
+                <li><a href ng-click="korpa()" >Korpa</a></li>
             </ul>
-            <p class="navbar-text navbar-right"><a href ng-click="logout()">Odjavi se</a></p>
         </div>
     </div>
 </nav>
