--- a/ProjaraWeb/WebContent/views/kupac.html
+++ b/ProjaraWeb/WebContent/views/kupac.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>EBAY copycat</title>
-</head>
-<body>
-	<h1>Ovo je kupac</h1>
-</body>
-</html>
+<div ng-include="'views/kupac_navBar.html'"></div>
+<br><br><br>
+<br><br><br>
+<div ng-controller="kupac_Controller">
+	<div class="col-md-2">
+	  <uib-accordion close-others="oneAtATime">
+	    <uib-accordion-group heading="{{kategorija.naziv}}" ng-repeat="kategorija in kategorije">
+	      <div ng-repeat="podkategorija in kategorija.podkategorije">{{podkategorija}}</div>
+	    </uib-accordion-group>
+	  </uib-accordion>
+ 	 </div>
+	 <div class="col-md-1">
+	 </div>
+	 <div class="col-md-9">
+	 	<div ng-include="'views/kupac_pretraga.html'"></div>
+	 	<br><br>
+	 	<div class="artikli" ng-repeat="artikal in artikli" class="row">
+	 		<div class="col-xs-4" id="artikal">
+		 		<figure>
+	 				<img src="assets/img/defaultImage.png"  style="width:180px;height:120px;">
+				    <figcaption>
+				    	<ul id="artikalPodaci">
+				    		<li>{{artikal.oznaka}}</li>
+				    		<li>{{artikal.naziv}}</li>
+				    		<li>{{artikal.kategorija}}</li>
+				    		<li>{{artikal.popust}}</li>
+				    	</ul>
+				    </figcaption>
+				</figure>
+	 		</div>
+	 	</div>
+	 </div>
+</div>
