kupac - osnovna strana - artikli

--- a/ProjaraWeb/WebContent/views/kupac.html
+++ b/ProjaraWeb/WebContent/views/kupac.html
@@ -17,13 +17,13 @@
 	 	<div class="artikli" ng-repeat="artikal in artikli" class="row">
 	 		<div class="col-xs-4" id="artikal">
 		 		<figure>
-	 				<img src="assets/img/defaultImage.png"  style="width:180px;height:120px;">
+	 				<img src="images/defaultImage.png"  style="width:180px;height:120px;">
 				    <figcaption>
 				    	<ul id="artikalPodaci">
-				    		<li>{{artikal.oznaka}}</li>
-				    		<li>{{artikal.naziv}}</li>
-				    		<li>{{artikal.kategorija}}</li>
-				    		<li>{{artikal.popust}}</li>
+				    		<li>Oznaka: {{artikal.oznaka}}</li>
+				    		<li>Naziv: {{artikal.naziv}}</li>
+				    		<li>Kategorija: {{artikal.kategorija}}</li>
+				    		<li>Popust: {{artikal.popust}}</li>
 				    	</ul>
 				    </figcaption>
 				</figure>
