--- a/ProjaraWeb/WebContent/assets/css/style.css
+++ b/ProjaraWeb/WebContent/assets/css/style.css
@@ -8,8 +8,13 @@ div#artikal{
 
 ul#artikalPodaci{
 	list-style-type: none;
+	margin: 0; 
+	padding: 0;
+
 }
 
 figure {
     float: left;
+    padding-left: 0px;
 }
+
