kupac - osnovna strana - dodaj u korpu

--- a/ProjaraWeb/WebContent/views/kupac.html
+++ b/ProjaraWeb/WebContent/views/kupac.html
@@ -24,6 +24,12 @@
 				    		<li>Naziv: {{artikal.naziv}}</li>
 				    		<li>Kategorija: {{artikal.kategorija}}</li>
 				    		<li>Popust: {{artikal.popust}}</li>
+				    		<li>
+				    			<input id="kolicinaArtikla" type="number" min=0 value=0>
+				    			<button type="button" class="btn btn-default btn-sm">
+						          <span class="glyphicon glyphicon-shopping-cart"></span> Dodaj u korpu
+						        </button>
+				    		</li>
 				    	</ul>
 				    </figcaption>
 				</figure>
