--- a/ProjaraWeb/WebContent/views/kupac.html
+++ b/ProjaraWeb/WebContent/views/kupac.html
@@ -24,6 +24,7 @@
 				    		<li>Naziv: {{artikal.naziv}}</li>
 				    		<li>Kategorija: {{artikal.kategorija}}</li>
 				    		<li>Popust: {{artikal.popust}}</li>
+				    		<li>Cena: <b>{{artikal.cena}}</b></li>
 				    		<li>
 				    			<input id="kolicinaArtikla" type="number" min=0 value=0>
 				    			<button type="button" class="btn btn-default btn-sm">
