Dodavanje i izmjena kategorija kupaca

--- a/ProjaraWeb/WebContent/views/menadzer_navBar.html
+++ b/ProjaraWeb/WebContent/views/menadzer_navBar.html
@@ -7,8 +7,9 @@
 
         <div id="navbar">
             <ul class="nav navbar-nav">
-                <li><a href ng-click="primer1()">Primer1</a></li>
-                <li><a href ng-click="primer2()" >Primer2</a></li>
+                <li><a href ng-click="kupci()">Kategorije kupaca</a></li>
+                <li><a href ng-click="artikli()" >Kategorije artikala</a></li>
+                <li><a href ng-click="akcije()" >Akcije</a></li>
             </ul>
             <p class="navbar-text navbar-right"><a href ng-click="logout()">Odjavi se</a></p>
         </div>
