--- a/ProjaraWeb/WebContent/views/menadzer.html
+++ b/ProjaraWeb/WebContent/views/menadzer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <meta charset="ISO-8859-1">
@@ -8,3 +8,6 @@
 	<h1>Ovo je menadzer</h1>
 </body>
 </html>
+-->
+
+<div ng-include="'views/menadzer_navBar.html'"></div>
