--- a/ProjaraWeb/WebContent/views/kupac.html
+++ b/ProjaraWeb/WebContent/views/kupac.html
@@ -1,6 +1,3 @@
-<div ng-include="'views/kupac_navBar.html'"></div>
-<br><br><br>
-<br><br><br>
 <div ng-controller="kupac_Controller">
 	<div class="col-md-2">
 	  <uib-accordion close-others="oneAtATime">
@@ -17,7 +14,7 @@
 	 	<div class="artikli" ng-repeat="artikal in artikli" class="row">
 	 		<div class="col-xs-4" id="artikal">
 		 		<figure>
-	 				<img src="images/defaultImage.png"  style="width:180px;height:120px;">
+	 				<img src="images/defaultImage.png"  style="width:180px;height:120px;" ng-click="viseInformacija(artikal.oznaka)">
 				    <figcaption>
 				    	<ul id="artikalPodaci">
 				    		<li>Oznaka: {{artikal.oznaka}}</li>
