--- a/ProjaraWeb/WebContent/views/kupac_pretraga.html
+++ b/ProjaraWeb/WebContent/views/kupac_pretraga.html
@@ -11,10 +11,10 @@
 			</select>
 	     </div>
 	    <div class="col-md-1"> 
-	    	<button ng-click="trazi()" class="btn btn-primary btn-block">Trazi</button>
+	    	<button ng-click="trazi()" class="btn btn-primary">Trazi</button>
 	    </div>
 	    <div class="col-md-2"> 
-			<button class="btn btn-block" ng-click=naprednaPretraga()>Napredna pretraga</button> 
+			<button class="btn" ng-click=naprednaPretraga()>Napredna pretraga</button> 
 		</div>
 	</div>
 </div>
