--- a/ProjaraWeb/WebContent/views/prodavac_navBar.html
+++ b/ProjaraWeb/WebContent/views/prodavac_navBar.html
@@ -7,6 +7,7 @@
 
         <div id="navbar">
         <ul class="nav navbar-nav">
+        		<li><a href ng-click="racuni()">Računi</a></li>
                 <li><a href ng-click="narudzbe()">Narudžbe</a></li>
         </ul>
             <p class="navbar-text navbar-right"><a href ng-click="odjava()">Odjava</a></p>
