--- a/ProjaraWeb/WebContent/views/kupac_korpa.html
+++ b/ProjaraWeb/WebContent/views/kupac_korpa.html
@@ -1,18 +1,40 @@
 <div class="col-md-2"></div>
-	<div ng-cloak="" class="tabsdemoDynamicHeight col-md-8" ng-app="sbzApp" ng-controller="kupac_korpaController">
-	  <md-content>
-	    <md-tabs md-dynamic-height="" md-border-bottom="">
-	      <md-tab label="Sa iskorišćenim bodovima">
-	        <md-content class="md-padding">
-			  <div ng-include="'views/kupac_racun1.html'"></div>
-	        </md-content>
-	      </md-tab>
-	      <md-tab label="Bez bodova">
-	        <md-content class="md-padding">
-	         	<div ng-include="'views/kupac_racun2.html'"></div>
-	        </md-content>
-	      </md-tab>
-	    </md-tabs>
-	  </md-content>
-	</div>
+<div class="col-md-8" ng-controller="kupac_korpaController">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>Oznaka</th>
+				<th>Naziv</th>
+				<th>Cena</th>
+				<th>Količina</th>
+				<th>Originalna cena</th>
+				<th>Popust</th>
+				<th>Ukupno</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="artikal in artikli">
+				<td>{{artikal.oznaka}}</td>
+				<td>{{artikal.naziv}}</td>
+				<td>{{artikal.cena}}</td>
+				<td>{{artikal.kolicina}}</td>
+				<td>{{artikal.originalnaCena}}</td>
+				<td>{{artikal.popust}}</td>
+				<td>{{artikal.ukupno}}</td>
+				<td>
+					<button class="btn" data-toggle="tooltip" title="Obriši iz korpe" ng-click="obrisiIzKorpe($index, artikal.oznaka)">
+					    <span class="glyphicon glyphicon-remove"></span>
+					</button>
+				</td>
+			</tr>
+			<tr>
+				<td colspan=6></td>
+				<td>Za uplatu</td>
+				<td>{{zaUplatu}}</td>
+			</tr>
+		</tbody>
+	</table>
+	<button class="btn btn-primary" style="float:right;" ng-click="racunOdabran()">Koristi ovaj račun</button>
+</div>
 <div class="col-md-2"></div>
