--- a/ProjaraWeb/WebContent/views/kupac_navBar.html
+++ b/ProjaraWeb/WebContent/views/kupac_navBar.html
@@ -9,7 +9,7 @@
             <p class="navbar-text navbar-right"><a href ng-click="odjava()">Odjavi se</a></p>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href ng-click="podaciOKorisniku()">korisnicko ime</a></li>
-                <li><a href ng-click="korpa($event)" >Korpa</a></li>
+                <li><a href ng-click="korpa()" >Korpa</a></li>
             </ul>
         </div>
     </div>
