--- a/ProjaraWeb/WebContent/views/kupac_profil.html
+++ b/ProjaraWeb/WebContent/views/kupac_profil.html
@@ -1,18 +1,17 @@
 <div>
-<div class="col-md-4">
-	Korisničko ime: <input type="text" class="form-control" disabled>
-	Lozinka: <input type="password" class="form-control">
-	Datum registracije: <input type="date" class="form-control" disabled>
-</div>
-<div class="col-md-4">
-	Ime: <input type="text" class="form-control">
-	Prezime: <input type="text" class="form-control">
-	Adresa: <br><textarea rows="4" class="form-control"></textarea>
-</div>
-<div class="col-md-4">
-	Kategorija kupca: <input type="text" class="form-control" disabled>
-	Nagradni bodovi: <input type="number" class="form-control" disabled>
-</div>
-	        <button id="profilIzmene" class="btn btn-primary">Sačuvaj izmene</button>
-
+	<div class="col-md-4">
+		Korisničko ime: <input type="text" class="form-control" disabled>
+		Lozinka: <input type="password" class="form-control">
+		Datum registracije: <input type="date" class="form-control" disabled>
+	</div>
+	<div class="col-md-4">
+		Ime: <input type="text" class="form-control">
+		Prezime: <input type="text" class="form-control">
+		Adresa: <br><textarea rows="4" class="form-control"></textarea>
+	</div>
+	<div class="col-md-4">
+		Kategorija kupca: <input type="text" class="form-control" disabled>
+		Nagradni bodovi: <input type="number" class="form-control" disabled>
+	</div>
+	<button id="profilIzmene" class="btn btn-primary" ng-click="cuvajIzmene()">Sačuvaj izmene</button>
 </div>
