--- a/ProjaraWeb/WebContent/views/kupac_artikalInfo_m.html
+++ b/ProjaraWeb/WebContent/views/kupac_artikalInfo_m.html
@@ -1,6 +1,6 @@
 <div modal="showModal" close="zatvori()">
     <div class="modal-header">
-        <h4>Pregled računa {{artikal.oznaka}}</h4>
+        <h4>Pregled računa {{oznakaArtikla}}</h4>
     </div>
     <div class="modal-body">
     	<div class="col-md-6">
