--- a/ProjaraWeb/WebContent/views/kupac_artikalInfo_m.html
+++ b/ProjaraWeb/WebContent/views/kupac_artikalInfo_m.html
@@ -1,24 +1,24 @@
 <div modal="showModal" close="zatvori()">
     <div class="modal-header">
-        <h4>Pregled računa {{oznakaArtikla}}</h4>
+        <h4>Artikal - {{artikal.oznaka}}</h4>
     </div>
     <div class="modal-body">
     	<div class="col-md-6">
-    		<img src="images/defaultImage.png"  style="width:180px;height:120px;" ng-click="viseInformacija(artikal.oznaka)">
+    		<img ng-src="{{artikal.slika || 'images/defaultImage.png'}}" style="max-width:300px;max-height:500px;overflow: hidden;" ng-click="viseInformacija(artikal.oznaka)">
     	</div>
     	<div class="col-md-6">
     		<table class="table table-striped">
     			<tr>
     				<td>Naziv:</td>
-    				<td></td>
+    				<td>{{artikal.naziv}}</td>
     			</tr>
     			<tr>
     				<td>Kategorija:</td>
-    				<td></td>
+    				<td>{{artikal.kategorija}}</td>
     			</tr>
     			<tr>
     				<td>Cena:</td>
-    				<td></td>
+    				<td>{{artikal.cena}}</td>
     			</tr>
     			<tr>
     				<td>Akcijski događaj:</td>
@@ -30,11 +30,11 @@
     			</tr>
     			<tr>
     				<td>Popust:</td>
-    				<td></td>
+    				<td>{{artikal.popust}}</td>
     			</tr>
     			<tr>
     				<td>Cena sa popustom:</td>
-    				<td></td>
+    				<td>{{artikal.cenaSaPopustom}}</td>
     			</tr>
     		</table>
     	</div>	
