--- a/ProjaraWeb/WebContent/views/kupac.html
+++ b/ProjaraWeb/WebContent/views/kupac.html
@@ -21,7 +21,7 @@
 	 		<div class="col-xs-4" id="artikal">
 		 		<figure>
 		 			<div style="width:180px;height:120px">
-	 					<img ng-src="{{artikal.slika || 'images/defaultImage.png'}}"   style="max-width:180px;max-height:120px;" ng-click="viseInformacija(artikal.oznaka)">
+	 					<img ng-src="{{artikal.slika || 'images/defaultImage.png'}}"   style="max-width:180px;max-height:120px;cursor: pointer;" ng-click="viseInformacija(artikal.oznaka)">
 				    </div>
 				    <figcaption>
 				    	<ul id="artikalPodaci">
