Redirect na login ako se pristupa direktno

--- a/ProjaraWeb/WebContent/views/prodavac_racunInfo_m.html
+++ b/ProjaraWeb/WebContent/views/prodavac_racunInfo_m.html
@@ -75,6 +75,9 @@
     					<th>Popust</th>
     					<th>Opis</th>
     					<th>Artikal</th>
+    					<th> &nbsp; </th>
+    					<th> &nbsp; </th>
+    					<th> &nbsp; </th>
     				</thead>
     				<tbody>
     					<tr ng-repeat="popust in racun.popusti">
